--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,16 @@
             font-size: 1.5em;
         }
     </style>
+    <!-- 百度统计 -->
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?ad7ba5b03bf52a9b727792c1675ffc6a";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body class="article toc2 toc-left">
 <div id="toc" class="toc2">
