--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,6 +23,16 @@
         }
     </script>
     <script src="/js/min/jquery-1.7.2.min.js"></script>
+    <!-- 百度统计 -->
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?ad7ba5b03bf52a9b727792c1675ffc6a";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
