--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -32,6 +32,16 @@
         <script src="/js/min/jquery-1.7.2.min.js"></script>
         <link rel="stylesheet" href="{{site.CDN_PATH}}/css/themes/my.css"/>
         <script src="/js/highlight.pack.js"></script>
+        <!-- 百度统计 -->
+        <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?ad7ba5b03bf52a9b727792c1675ffc6a";
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>
     </head>
 
     <body>
