--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,7 +1,9 @@
 
 <article class="post" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
   <header class="post-header">
-    <h1 class="post-title"><a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}">{{ post.title }}</a></h1>
+    <h1 class="post-title">
+        <a href="{{ post.url | prepend: site.baseurl }}" title="Permalink to {{ post.title }}">{{ post.title }}</a>
+    </h1>
   </header>
 
   <p>
