--- a/_assets/sass/_globals.scss
+++ b/_assets/sass/_globals.scss
@@ -170,7 +170,7 @@ code {
   background: none;
   border-radius: 0;
   border: none;
-  font-family: "Courier New", monospace;
+  font-family: "WenQuanYi Micro Hei Mono","文泉驿微米黑","文泉驿等宽微米黑","Courier New", monospace;
   font-size: 0.9em;
   margin: 0;
   padding: 0;
@@ -178,7 +178,7 @@ code {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  font-family: "Courier New", monospace;
+  font-family: "WenQuanYi Micro Hei Mono","文泉驿微米黑","文泉驿等宽微米黑","Courier New", monospace;
   font-size: 0.9em;
   margin: 0;
 
