--- a/_assets/sass/settings/_variables.scss
+++ b/_assets/sass/settings/_variables.scss
@@ -3,8 +3,10 @@
 //
 
 // $font-family-base: "Raleway", Helvetica, sans-serif !default;
-$font-family-base: "Droid Sans", Helvetica, sans-serif !default;
-$font-family-serif: "Droid Serif", sans-serif !default;
+$font-family-base: "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei",
+"Droid Sans", sans-serif !default;
+$font-family-serif: "Titillium Web", "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei",
+"Droid Serif", sans-serif !default;
 $line-height: 1.8 !default;
 $font-size-base: 18px !default;
 
