--- a/_assets/sass/_globals.scss
+++ b/_assets/sass/_globals.scss
@@ -2,8 +2,8 @@
 =            Globals styles            =
 ======================================*/
 // @import url("//fonts.googleapis.com/css?family=Raleway:400,700");
-@import url("//fonts.googleapis.com/css?family=Droid+Sans:400,700");
-@import url("//fonts.googleapis.com/css?family=Droid+Serif:400,700");
+//@import url("//fonts.googleapis.com/css?family=Droid+Sans:400,700");
+//@import url("//fonts.googleapis.com/css?family=Droid+Serif:400,700");
 
 * {
   &,
