--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -95,11 +95,11 @@
 //   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 // })();
 </script>
-<script type="text/javascript">
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?ad7ba5b03bf52a9b727792c1675ffc6a";
+  hm.src = "https://hm.baidu.com/hm.js?72b9311f4c56307525a6ad2c9dafe596";
   var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
