--- a/source/assets/markdownhere.css
+++ b/source/assets/markdownhere.css
@@ -7,7 +7,7 @@
 
 pre, code {
   font-size: 14px;
-  font-family: Monaco,Verdana，"droid sans fallback"，monospace,"Microsoft YaHei","微软雅黑",STXihei,"华文细黑",'Courier New', Consolas, Inconsolata, Courier, monospace;
+  font-family: Monaco,Verdana,"droid sans fallback",monospace,"Microsoft YaHei","微软雅黑",STXihei,"华文细黑",'Courier New', Consolas, Inconsolata, Courier, monospace;
   /*font-family: Roboto, 'Courier New', Consolas, Inconsolata, Courier, monospace;*/
   margin: auto 5px;
 }
@@ -21,7 +21,7 @@ code {
 pre {
   font-size: 15px;
   line-height: 1.4em;
-  display: block; !important;
+  display: block !important;
 }
 
 pre code {
@@ -34,8 +34,9 @@ pre code {
 }
 
 strong, b{
-  color: #BF360C;
-  /*color: #ff7e79;*/
+  /*color: #BF360C;
+  color: #ff7e79;*/
+  color: #F1580A;
 }
 
 em, i {
@@ -92,7 +93,7 @@ dl dd {
 }
 
 blockquote, q {
-  border-left: 2px solid #009688;
+  border-left: 1.5px solid #777;
   padding: 0 10px;
   color: #777;
   quotes: none;
